Fix Voting error and Image overflows in Posts

--- a/angular-app/src/app/forum/list-posts/list-posts.component.css
+++ b/angular-app/src/app/forum/list-posts/list-posts.component.css
@@ -9,9 +9,12 @@ mat-card {
   margin: 1rem auto;
   width: 60%;
 }
-img {
-  max-width: 220px;
-  max-height: auto;
+.post-content {
+  width: 100%;
+  height: auto;
+}
+.post-content div {
+  overflow: hidden;
 }
 h3{
   width: 100%; margin: 4px; padding: 0;
